Fixing bug 606051: URL Slug not hidden by default

--- a/media/css/zamboni/zamboni.css
+++ b/media/css/zamboni/zamboni.css
@@ -2611,10 +2611,12 @@ label > .optional {
 
 #id_slug {
     border-left: 0;
-    display: none;
 }
 #id_slug:focus {
     outline: 0;
+}
+#slug_edit {
+    display: none;
 }
 #slug_edit span {
     border: 1px solid #5875A0;
@@ -2627,6 +2629,7 @@ label > .optional {
     color: #888;
 }
 #slug_value {
+    font-weight: bold;
     color: #222;
 }
 
